# docling_lightrag_demo

./: .gitignore  README.md  main.py  pyproject.toml
.qoder/plans/: 实现_SRA_RAG_模块_e7315757.md
docs/: PDF处理数据存储说明.md  和产品确定的细节.md
examples/: agent_report_example.py  docling_chunking_examples.py  embed_documents_example.py  my_input.json  rag_usage_example.py  run_real_agent_report.py
examples/outputs/: real_agent_report.md  real_agent_report_1.md
examples/outputs/docling_chunks/: 001_test.hierarchical.jsonl  001_test.hybrid.jsonl  001_test.no_chunk.jsonl
sra_agent/: __init__.py  options.py  orchestrator.py  retrieval_tool.py  state.py
sra_agent/sub_agents/: common.py  conclusion.py  economics.py  hotspot.py  innovation.py  overview.py  research_ideas.py  research_status.py  reviewer.py  safety.py
sra_rag/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  config.py  factory.py  options.py
sra_rag/docs/: IMPLEMENTATION_SUMMARY.md
sra_rag/indexer/: __init__.py  base.py  lightrag_indexer.py
sra_rag/parser/: __init__.py  base.py  docling_parser.py
sra_rag/retrieval/: __init__.py  base.py  lightrag_retrieval.py
sra_rag_data_test/: docling_chunks.json  docling_content.md  docling_metadata.json  docling_parsed_document.json  vdb_chunks.json
tests/: test_agent_state.py  test_pdf_processing.py  test_retrieval_tool.py  verify_rag_module.py
